src/test/ui/issues/issue-78622.stderr
error[E0223]: ambiguous associated type
  --> $DIR/issue-78622.rs:5:5
   |
LL |     S::A::<f> {}
   |     ^^^^^^^^^ help: use fully-qualified syntax: `<S as Trait>::A`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0223`.
