src/test/ui/issues/issue-78622.rs
struct S;
fn f() {
    S::A::<f> {} //~ ERROR ambiguous associated type
}
fn main() {}
